--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -271,7 +271,7 @@
         <record id="email_template_stock_picking_2" model="mail.template">
           <field name="name">Email Template Stock Picking User</field>
           <field name="email_from">admin@palmagroup.co.id</field>
-          <field name="subject">Approval GRN / SRN  To ${object.assigned_to.name}</field>
+          <field name="subject">Approval GRN / SRN  To ${object.requested_by.name}</field>
           <field name="email_to">${object.requested_by.partner_id.email}</field>
           <field name="lang">${object.lang}</field>
           <field name="model_id" ref="stock.model_stock_picking"/>
