--- a/purchase_indonesia/reports/report_goods_receipt_notes.xml
+++ b/purchase_indonesia/reports/report_goods_receipt_notes.xml
@@ -2,13 +2,6 @@
 <!--Custom report.-->
 <openerp>
     <data>
-        <!-- 
-      	<template id="minimal_layout_inherit" inherit_id="report.minimal_layout">
-		      <xpath expr="//head" position="inside">
-		             <link rel='stylesheet' href="/purchase_indonesia/static/src/css/report_goods_receipt_notes.css"/>
-		      </xpath>
-		</template>
-		 -->
         <template id="report_goods_receipet_notes_document">
             <t t-call="report.html_container">
                 <t t-foreach="docs" t-as="o">
@@ -140,58 +133,61 @@
 		           			
 		              		<!-- Detail Header -->
 		              		<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table width="100%">
-		                            <tr class="label_table_header">
-									    <td>
-									      No
-									    </td>
-									    <td>
-									      Kode Barang/Jasa
-									    </td>
-									    <td>
-									      Nama Barang/Jasa
-									    </td>
-									    <td>
-									      Dikirim
-									    </td>
-									    <td>
-									      Diterima
-									    </td>
-									    <td>
-									      Satuan
-									    </td>
-									    <td>
-									      Selisih/Catatan
-									    </td>
-									</tr>
-								
-									<t t-foreach="o.pack_operation_product_ids" t-as="l">
-										<t t-set="idx" t-value="idx+1"/>
-										<t t-set="delta" t-value="l.product_qty-l.qty_done"/>
-										<tr>
-										   	<td>
-												<span t-esc="idx"/>
-											</td> 	
-										    <td>
-										      	<span t-field="l.product_id.default_code"/>
-										    </td>
-										    <td>
-										      	<span t-field="l.product_id.name"/>
-										    </td>
-										    <td align="center">
-										      	<span t-field="l.product_qty"/>
-										    </td>
-										    <td align="center">
-										      	<span t-field="l.qty_done"/>
-										    </td>
-										    <td align="center">
-										      	<span t-field="l.product_id.uom_id"/>	    
-										    </td>
-										    <td align="center">
-										      	<span t-esc="delta"/>
-										    </td>
+		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		              			    <thead>
+			                            <tr class="label_table_header">
+										    <th>
+										      No
+										    </th>
+										    <th>
+										      Kode Barang/Jasa
+										    </th>
+										    <th>
+										      Nama Barang/Jasa
+										    </th>
+										    <th>
+										      Dikirim
+										    </th>
+										    <th>
+										      Diterima
+										    </th>
+										    <th>
+										      Satuan
+										    </th>
+										    <th>
+										      Selisih/Catatan
+										    </th>
 										</tr>
-									</t>
+									</thead>
+									<tbody>
+										<t t-foreach="o.pack_operation_product_ids" t-as="l">
+											<t t-set="idx" t-value="idx+1"/>
+											<t t-set="delta" t-value="l.product_qty-l.qty_done"/>
+											<tr>
+											   	<td>
+													<span t-esc="idx"/>
+												</td> 	
+											    <td>
+											      	<span t-field="l.product_id.default_code"/>
+											    </td>
+											    <td>
+											      	<span t-field="l.product_id.name"/>
+											    </td>
+											    <td align="center">
+											      	<span t-field="l.product_qty"/>
+											    </td>
+											    <td align="center">
+											      	<span t-field="l.qty_done"/>
+											    </td>
+											    <td align="center">
+											      	<span t-field="l.product_id.uom_id"/>	    
+											    </td>
+											    <td align="center">
+											      	<span t-esc="delta"/>
+											    </td>
+											</tr>
+										</t>
+									</tbody>
 								</table>
 							</div>
 							
