--- a/purchase_indonesia/reports/report_purchase_order.xml
+++ b/purchase_indonesia/reports/report_purchase_order.xml
@@ -2,13 +2,6 @@
 <!--Custom report.-->
 <openerp>
     <data>
-        <!--
-      	<template id="minimal_layout_inherit" inherit_id="report.minimal_layout">
-		      <xpath expr="//head" position="inside">
-		             <link rel='stylesheet' href="/purchase_indonesia/static/src/css/report_purchase_order.css"/>
-		      </xpath>
-		</template>
-         -->
         <template id="report_purchase_order">
             <t t-call="report.html_container">
                 <t t-foreach="docs" t-as="o">
@@ -126,116 +119,119 @@
 							
 		              		<!-- Detail Header -->
 		           			<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table width="100%">
-		                            <tr class="label_table_header">
-									    <td>
-									      CODE
-									    </td>
-									    <td>
-									      DESCRIPTION
-									    </td>
-									    <td>
-									      QTY
-									    </td>
-									    <td>
-									      UOM
-									    </td>
-									    <td>
-									      PRICE/UNIT
-									    </td>
-									    <td>
-									      TOTAL
-									    </td>
-									</tr>
-								
-									<t t-foreach="o.order_line" t-as="l">
+		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		                            <thead>
+			                            <tr class="label_table_header">
+										    <th>
+										      CODE
+										    </th>
+										    <th>
+										      DESCRIPTION
+										    </th>
+										    <th>
+										      QTY
+										    </th>
+										    <th>
+										      UOM
+										    </th>
+										    <th>
+										      PRICE/UNIT
+										    </th>
+										    <th>
+										      TOTAL
+										    </th>
+										</tr>
+									</thead>
+									<tbody>
+										<t t-foreach="o.order_line" t-as="l">
+											<tr>
+											    <td>
+											      	<span t-field="l.product_id.default_code"/>
+											    </td>
+											    <td>
+											      	<span t-field="l.product_id.name"/>
+											    </td>
+											    <td align="center">
+											      	<span t-field="l.product_qty"/>
+											    </td>
+											    <td align="center">
+											      	<span t-field="l.product_uom"/>
+											    </td>
+											    <td align="right">
+											      	<span t-field="l.price_unit"/>
+											    </td>
+											    <td align="right">
+											      	<span t-field="l.price_subtotal"/>
+											    </td>
+											</tr>
+										</t>
+										
 										<tr>
-										    <td>
-										      	<span t-field="l.product_id.default_code"/>
+										    <td colspan="4">
+										        &#160;
 										    </td>
 										    <td>
-										      	<span t-field="l.product_id.name"/>
-										    </td>
-										    <td align="center">
-										      	<span t-field="l.product_qty"/>
-										    </td>
-										    <td align="center">
-										      	<span t-field="l.product_uom"/>
+										      	Sub Total
 										    </td>
 										    <td align="right">
-										      	<span t-field="l.price_unit"/>
-										    </td>
-										    <td align="right">
-										      	<span t-field="l.price_subtotal"/>
+										      	<span t-field="o.amount_untaxed"/>
 										    </td>
 										</tr>
-									</t>
-									
-									<tr>
-									    <td colspan="4">
-									        &#160;
-									    </td>
-									    <td>
-									      	Sub Total
-									    </td>
-									    <td align="right">
-									      	<span t-field="o.amount_untaxed"/>
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="4">
-									        &#160;
-									    </td>
-									    <td>
-									      	Tax
-									    </td>
-									    <td align="right">
-									      	<span t-field="o.amount_tax"/>
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="5" style="text-align: center;">
-									      	GRAND TOTAL
-									    </td>
-									    <td align="right">
-									      	<span t-field="o.amount_total"/>
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="3" class="noborder" style="border-right: 1px solid black;">
-									      	Delivery 	:
-									    </td>
-									    <td colspan="3" class="noborder" align="center">
-									      	<u>PAYMENT</u>
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="3" class="noborder" style="border-right: 1px solid black;">
-									      	<span t-field="o.picking_type_id.warehouse_id.name"/>
-									    </td>
-									    <td colspan="3" class="noborder">
-									      	TOP			: <span t-field="o.payment_term_id"/>
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="3"  class="noborder" style="border-right: 1px solid black;">
-									      	Address 	:
-									    </td>
-									    <td colspan="3" class="noborder">
-									      	&#160; 
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="3"  class="noborder" style="border-right: 1px solid black;">
-									      	<span t-field="o.picking_type_id.warehouse_id.partner_id.street"/>
-                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.street2"/>
-                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.zip"/>
-                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.city"/>
-									    </td>
-									    <td colspan="3" class="noborder">
-									      	Currency	: <span t-field="o.currency_id"/>
-									    </td>
-									</tr>
+										<tr>
+										    <td colspan="4">
+										        &#160;
+										    </td>
+										    <td>
+										      	Tax
+										    </td>
+										    <td align="right">
+										      	<span t-field="o.amount_tax"/>
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="5" style="text-align: center;">
+										      	GRAND TOTAL
+										    </td>
+										    <td align="right">
+										      	<span t-field="o.amount_total"/>
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="3" class="noborder" style="border-right: 1px solid black;">
+										      	Delivery 	:
+										    </td>
+										    <td colspan="3" class="noborder" align="center">
+										      	<u>PAYMENT</u>
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="3" class="noborder" style="border-right: 1px solid black;">
+										      	<span t-field="o.picking_type_id.warehouse_id.name"/>
+										    </td>
+										    <td colspan="3" class="noborder">
+										      	TOP			: <span t-field="o.payment_term_id"/>
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="3"  class="noborder" style="border-right: 1px solid black;">
+										      	Address 	:
+										    </td>
+										    <td colspan="3" class="noborder">
+										      	&#160; 
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="3"  class="noborder" style="border-right: 1px solid black;">
+										      	<span t-field="o.picking_type_id.warehouse_id.partner_id.street"/>
+	                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.street2"/>
+	                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.zip"/>
+	                       		            	<span t-field="o.picking_type_id.warehouse_id.partner_id.city"/>
+										    </td>
+										    <td colspan="3" class="noborder">
+										      	Currency	: <span t-field="o.currency_id"/>
+										    </td>
+										</tr>
+									</tbody>
 								</table>
 								<table width="100%">
 		                            <tr>
