--- a/purchase_indonesia/reports/report_purchase_quotation.xml
+++ b/purchase_indonesia/reports/report_purchase_quotation.xml
@@ -2,13 +2,6 @@
 <!--Custom report.-->
 <openerp>
     <data>
-        <!--
-      	<template id="minimal_layout_inherit" inherit_id="report.minimal_layout">
-			<xpath expr="//head" position="inside">
-		      	<link rel='stylesheet' href="/purchase_indonesia/static/src/css/report_purchase_quotation.css"/>
-		  	</xpath>
-		</template>
-		 -->
         <template id="report_purchase_quotation">
             <t t-call="report.html_container">
                 <t t-foreach="docs" t-as="o">
@@ -46,128 +39,132 @@
 		           			
 		           			<!-- Detail Header -->
 		           			<div class="row" style="text-align:left;font-size:14pt;">
-		              			<table width="100%">
-		                            <tr class="label_table_header">
-									    <td>
-									      No
-									    </td>
-									    <td>
-									      Nama Barang/Jasa
-									    </td>
-									    <td>
-									      Keterangan Barang/Jasa
-									    </td>
-									    <td>
-									      Qty
-									    </td>
-									    <td>
-									      Satuan
-									    </td>
-									    <td>
-									      Harga Satuan
-									    </td>
-									    <td>
-									      Jumlah
-									    </td>
-									    <td>
-									      Status Barang/Jasa <br></br>(Ready/Indent)
-									    </td>
-									</tr>
-									<t t-foreach="o.order_line" t-as="l">
-										<t t-set="idx" t-value="idx+1"/>   	
+		              			<table class="table table-striped table-condensed table-bordered" width="100%">
+		              			    <thead>
+			                            <tr class="label_table_header">
+										    <th>
+										      No
+										    </th>
+										    <th>
+										      Nama Barang/Jasa
+										    </th>
+										    <th>
+										      Keterangan Barang/Jasa
+										    </th>
+										    <th>
+										      Qty
+										    </th>
+										    <th>
+										      Satuan
+										    </th>
+										    <th>
+										      Harga Satuan
+										    </th>
+										    <th>
+										      Jumlah
+										    </th>
+										    <th>
+										      Status Barang/Jasa <br></br>(Ready/Indent)
+										    </th>
+										</tr>
+									</thead>
+									<tbody>
+										<t t-foreach="o.order_line" t-as="l">
+											<t t-set="idx" t-value="idx+1"/>   	
+											<tr>
+											    <td>
+											      	<span t-esc="idx"/>
+											    </td>
+											    <td>
+											      	<span t-field="l.product_id.name"/>
+											    </td>
+											    <td>
+											      	<span t-field="l.product_id.name"/>
+											    </td>
+											    <td>
+											      	<span t-field="l.product_qty"/>
+											    </td>
+											    <td>
+											      	<span t-field="l.product_uom"/>
+											    </td>
+											    <td>
+											      	&#160;
+											    </td>
+											    <td>
+											      	&#160;
+											    </td>
+											    <td>
+											      	&#160;
+											    </td>
+											</tr>
+										</t>
 										<tr>
-										    <td>
-										      	<span t-esc="idx"/>
+										    <td colspan="5">
+										      	Sub Total
 										    </td>
-										    <td>
-										      	<span t-field="l.product_id.name"/>
-										    </td>
-										    <td>
-										      	<span t-field="l.product_id.name"/>
-										    </td>
-										    <td>
-										      	<span t-field="l.product_qty"/>
-										    </td>
-										    <td>
-										      	<span t-field="l.product_uom"/>
-										    </td>
-										    <td>
+										    <td colspan="2">
 										      	&#160;
 										    </td>
 										    <td>
-										      	&#160;
-										    </td>
-										    <td>
-										      	&#160;
+										     	&#160; 	
 										    </td>
 										</tr>
-									</t>
-									<tr>
-									    <td colspan="5">
-									      	Sub Total
-									    </td>
-									    <td colspan="2">
-									      	&#160;
-									    </td>
-									    <td>
-									     	&#160; 	
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="5">
-									      	Discount
-									    </td>
-									    <td colspan="2">
-									     	&#160; 	
-									    </td>
-									    <td>
-									     	&#160; 	
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="5">
-									      	Tax
-									    </td>
-									    <td colspan="2">
-									      	&#160;
-									    </td>
-									    <td>
-									     	&#160; 	
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="5" style="text-align: center;">
-									      	GRAN TOTAL
-									    </td>
-									    <td colspan="2">
-									      	&#160;
-									    </td>
-									    <td>
-									     	&#160; 	
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="5" class="noborder">
-									      	Pembayaran&#160;:
-									    </td>
-									    <td class="noborder" colspan="2">
-									      	Cash&#160;/&#160;Kredit&#160;____&#160;hari
-									    </td>
-									    <td class="noborder">
-									     	&#160; 	
-									    </td>
-									</tr>
-									<tr>
-									    <td colspan="5" class="noborder">
-									      	Alamat Pengiriman&#160;:
-									    </td>
-									    <td class="noborder" colspan="2">
-									      	Kantor Palma Group&#160;/&#160;Site Gorontalo
-									    </td>
-									    <td class="noborder">
-									     	&#160; 	
-									    </td>
-									</tr>			
+										<tr>
+										    <td colspan="5">
+										      	Discount
+										    </td>
+										    <td colspan="2">
+										     	&#160; 	
+										    </td>
+										    <td>
+										     	&#160; 	
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="5">
+										      	Tax
+										    </td>
+										    <td colspan="2">
+										      	&#160;
+										    </td>
+										    <td>
+										     	&#160; 	
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="5" style="text-align: center;">
+										      	GRAN TOTAL
+										    </td>
+										    <td colspan="2">
+										      	&#160;
+										    </td>
+										    <td>
+										     	&#160; 	
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="5" class="noborder">
+										      	Pembayaran&#160;:
+										    </td>
+										    <td class="noborder" colspan="2">
+										      	Cash&#160;/&#160;Kredit&#160;____&#160;hari
+										    </td>
+										    <td class="noborder">
+										     	&#160; 	
+										    </td>
+										</tr>
+										<tr>
+										    <td colspan="5" class="noborder">
+										      	Alamat Pengiriman&#160;:
+										    </td>
+										    <td class="noborder" colspan="2">
+										      	Kantor Palma Group&#160;/&#160;Site Gorontalo
+										    </td>
+										    <td class="noborder">
+										     	&#160; 	
+										    </td>
+										</tr>
+									</tbody>			
 								</table>
 								<table width="100%">
 		                            <tr>
