[ADD] no deduction and tax yet

--- a/estate_payroll/views/report_estate_payslip.xml
+++ b/estate_payroll/views/report_estate_payslip.xml
@@ -19,6 +19,7 @@
                             <t t-set="total_adj" t-value="0"/>
                             <t t-set="total_allowance" t-value="0"/>
                             <t t-set="total_amount_brutto" t-value="0"/>
+                            <t t-set="total_amount_tax" t-value="0"/>
                             <t t-set="total_deduction" t-value="0"/>
                             <t t-set="total_amount_rounding" t-value="0"/>
                             <t t-set="total_amount_netto" t-value="0"/>
@@ -103,6 +104,7 @@
                                             <t t-set="amount_rounding_team" t-value="0"/>
                                             <t t-set="amount_netto_team" t-value="0"/>
                                             <t t-set="amount_brutto_team" t-value="0"/>
+                                            <t t-set="amount_tax_team" t-value="0"/>
                                             <t t-set="amount_total_other" t-value="0"/>
                                             <t t-set="no" t-value="0"/>
                                             <t t-set="last_row" t-value="len(get_payslip_team(team.id, batch.date_start, batch.date_end, batch.id, batch.company_id.id))"/>
@@ -118,6 +120,7 @@
                                             <t t-set="total_adj_team" t-value="0"/>
                                             <t t-set="total_allowance_team" t-value="0"/>
                                             <t t-set="total_amount_brutto_team" t-value="0"/>
+                                            <t t-set="total_amount_tax_team" t-value="0"/>
                                             <t t-set="total_deduction_team" t-value="0"/>
                                             <t t-set="total_amount_rounding_team" t-value="0"/>
                                             <t t-set="total_amount_netto_team" t-value="0"/>
@@ -139,6 +142,7 @@
                                                 <t t-set="amount_adja" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'ADJA')"/>
                                                 <t t-set="amount_adjb" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'ADJB')"/>
                                                 <t t-set="amount_adj" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'ADJB')"/>
+                                                <t t-set="pot" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'POT')"/>
                                                 <t t-set="jhte" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JHTE')"/>
                                                 <t t-set="jhtc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JHTC')"/>
                                                 <t t-set="jkkc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JKKC')"/>
@@ -149,10 +153,11 @@
                                                 <t t-set="amount_bpjs_health" t-value="bpjspkwte+bpjspkwtc"/>
                                                 <t t-set="amount_allowance" t-value="0"/> <!-- no allowance define yet -->
                                                 <t t-set="amount_brutto" t-value="amount_edw+amount_ot+amount_pr+amount_adj"/>
-                                                <t t-set="amount_deduction" t-value="jhte+bpjspkwte"/>
+                                                <t t-set="amount_tax" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'TAXPKWT')"/>
+                                                <t t-set="amount_deduction" t-value="jhte+bpjspkwte+pot"/>
                                                 <t t-set="amount_rounding" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'RND')+get_line_total(payslip.id, payslip.employee_id.id, 'RNDJ')"/>
-                                                <t t-set="amount_netto" t-value="amount_brutto-amount_deduction+amount_rounding"/>
-                                                <t t-set="amount_sub_total_other" t-value="amount_bpjs_labour+amount_bpjs_health"/>
+                                                <t t-set="amount_netto" t-value="amount_brutto-amount_tax-amount_deduction+amount_rounding"/>
+                                                <t t-set="amount_sub_total_other" t-value="amount_bpjs_labour+amount_bpjs_health+amount_tax"/>
 
                                                 <t t-set="amount_netto_team" t-value="amount_netto_team+amount_netto"/>
                                                 <t t-set="amount_total_other" t-value="amount_total_other+amount_sub_total_other"/>
@@ -168,6 +173,7 @@
                                                 <t t-set="total_adj_team" t-value="total_adj_team + amount_adj"/>
                                                 <t t-set="total_allowance_team" t-value="total_allowance_team + amount_allowance"/>
                                                 <t t-set="total_amount_brutto_team" t-value="total_amount_brutto_team + amount_brutto"/>
+                                                <t t-set="total_amount_tax_team" t-value="total_amount_tax_team + amount_tax"/>
                                                 <t t-set="total_deduction_team" t-value="total_deduction_team + amount_deduction"/>
                                                 <t t-set="total_amount_rounding_team" t-value="total_amount_rounding_team + amount_rounding"/>
                                                 <t t-set="total_amount_netto_team" t-value="total_amount_netto_team + amount_netto"/>
@@ -187,6 +193,7 @@
                                                 <t t-set="total_adj" t-value="total_adj + amount_adj"/>
                                                 <t t-set="total_allowance" t-value="total_allowance + amount_allowance"/>
                                                 <t t-set="total_amount_brutto" t-value="total_amount_brutto + amount_brutto"/>
+                                                <t t-set="total_amount_tax" t-value="total_amount_tax + amount_tax"/>
                                                 <t t-set="total_deduction" t-value="total_deduction + amount_deduction"/>
                                                 <t t-set="total_amount_rounding" t-value="total_amount_rounding + amount_rounding"/>
                                                 <t t-set="total_amount_netto" t-value="total_amount_netto + amount_netto"/>
@@ -209,12 +216,12 @@
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_adj_team)"/></td>
                                                 <td class="text-right"></td>
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_amount_brutto_team)"/></td>
-                                                <td class="text-right"><t t-esc="'({0:,.0f})'.format(total_deduction_team)"/></td>
+                                                <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_deduction_team)"/></td>
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_amount_rounding_team)"/></td>
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_amount_netto_team)"/></td>
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_bpjs_tk_team)"/></td>
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_bpjs_k_team)"/></td>
-                                                <td class="text-right"></td>
+                                                <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_amount_tax_team)"/></td>
                                                 <td class="text-right"><t t-esc="'{0:,.0f}'.format(total_st_other_team)"/></td>
                                             </tr>
                                         </tbody>
@@ -233,12 +240,12 @@
                                     <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_adj)"/></strong></td>
                                     <td class="text-right"><strong></strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_amount_brutto)"/></strong></td>
-                                    <td class="text-right"><strong><t t-esc="'({0:,.0f})'.format(total_deduction)"/></strong></td>
+                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_deduction)"/></strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_amount_rounding)"/></strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_amount_netto)"/></strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_bpjs_tk)"/></strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_bpjs_k)"/></strong></td>
-                                    <td class="text-right"></td>
+                                    <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_amount_tax)"/></strong></td>
                                     <td class="text-right"><strong><t t-esc="'{0:,.2f}'.format(total_st_other)"/></strong></td>
                                 </tr>
                             </table>
@@ -273,7 +280,8 @@
                             </table>
 
 
-            <!-- Payroll List by Team -->
+                            <!-- Payroll List by Team -->
+
                             <p style="page-break-after:always;">  </p>
                             <!--division-->
                             <t t-foreach="get_division(batch)" t-as="division">
@@ -292,6 +300,7 @@
                                     <t t-set="total_allowance_team" t-value="0"/>
                                     <t t-set="total_deduction_team" t-value="0"/>
                                     <t t-set="total_brutto_team" t-value="0"/>
+                                    <t t-set="total_tax_team" t-value="0"/>
                                     <t t-set="total_rounding_team" t-value="0"/>
                                     <t t-set="total_netto_team" t-value="0"/>
                                     <t t-set="total_bpjs_tk_team" t-value="0"/>
@@ -340,6 +349,7 @@
                                                 <th rowspan="2">Tunjangan</th>
                                                 <th rowspan="2">Jumlah Penghasilan</th>
                                                 <th rowspan="2">Potongan</th>
+                                                <th rowspan="2">Pajak</th>
                                                 <th rowspan="2">≈</th>
                                                 <th rowspan="2">Penghasilan Bersih</th>
                                                 <th rowspan="2" colspan="2">Tanda Tangan</th>
@@ -356,6 +366,7 @@
                                         </thead>
                                         <tbody>
                                             <t t-set="amount_brutto_team" t-value="0"/>
+                                            <t t-set="amount_tax_team" t-value="0"/>
                                             <t t-set="amount_rounding_team" t-value="0"/>
                                             <t t-set="amount_netto_team" t-value="0"/>
                                             <t t-set="amount_total_other" t-value="0"/>
@@ -372,6 +383,7 @@
                                                     <t t-set="amount_adja" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'ADJA')"/>
                                                     <t t-set="amount_adjb" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'ADJB')"/>
                                                     <t t-set="amount_adj" t-value="amount_adja-amount_adjb"/>
+                                                    <t t-set="pot" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'POT')"/>
                                                     <t t-set="jhte" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JHTE')"/>
                                                     <t t-set="jhtc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JHTC')"/>
                                                     <t t-set="jkkc" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'JKKC')"/>
@@ -382,9 +394,10 @@
                                                     <t t-set="amount_bpjs_health" t-value="bpjspkwte+bpjspkwtc"/>
                                                     <t t-set="amount_allowance" t-value="0"/> <!-- no allowance define yet -->
                                                     <t t-set="amount_brutto" t-value="amount_edw+amount_ot+amount_pr+amount_adj"/>
-                                                    <t t-set="amount_deduction" t-value="jhte+bpjspkwte"/>
+                                                    <t t-set="amount_tax" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'TAXPKWT')"/>
+                                                    <t t-set="amount_deduction" t-value="jhte+bpjspkwte+pot"/>
                                                     <t t-set="amount_rounding" t-value="get_line_total(payslip.id, payslip.employee_id.id, 'RND')"/>
-                                                    <t t-set="amount_netto" t-value="amount_brutto-amount_deduction+amount_rounding"/>
+                                                    <t t-set="amount_netto" t-value="amount_brutto-amount_deduction-amount_tax+amount_rounding"/>
                                                     <t t-set="amount_sub_total_other" t-value="amount_bpjs_labour+amount_bpjs_health"/>
                                                     <t t-set="amount_total_other" t-value="amount_total_other+amount_sub_total_other"/>
                                                     <t t-set="no" t-value="no+1"/>
@@ -399,6 +412,7 @@
                                                     <t t-set="total_allowance_team" t-value="total_allowance_team + amount_allowance"/>
                                                     <t t-set="total_deduction_team" t-value="total_deduction_team + amount_deduction"/>
                                                     <t t-set="total_brutto_team" t-value="total_brutto_team+amount_brutto"/>
+                                                    <t t-set="total_tax_team" t-value="total_tax_team+amount_tax"/>
                                                     <t t-set="total_rounding_team" t-value="total_rounding_team + amount_rounding"/>
                                                     <t t-set="total_netto_team" t-value="total_netto_team+amount_netto"/>
                                                     <t t-set="total_bpjs_tk_team" t-value="total_bpjs_tk_team + amount_bpjs_labour"/>
@@ -417,7 +431,8 @@
                                                     <td class="text-right"><t t-esc="'{0:,.0f}'.format(amount_adj)"/></td>
                                                     <td class="text-right"></td>
                                                     <td class="text-right"><t t-esc="'{0:,.0f}'.format(amount_brutto)"/></td>
-                                                    <td class="text-right"><t t-esc="'({0:,.0f})'.format(amount_deduction)"/></td>
+                                                    <td class="text-right"><t t-esc="'{0:,.0f}'.format(amount_deduction)"/></td>
+                                                    <td class="text-right"><t t-esc="'{0:,.0f}'.format(amount_tax)"/></td>
                                                     <td class="text-right"><t t-esc="'{0:,.0f}'.format(amount_rounding)"/></td>
                                                     <td class="text-right"><t t-esc="'{0:,.0f}'.format(amount_netto)"/></td>
 
@@ -444,7 +459,8 @@
                                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_adj_team)"/></strong></td>
                                                 <td class="text-right"><strong></strong></td>
                                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_brutto_team)"/></strong></td>
-                                                <td class="text-right"><strong><t t-esc="'({0:,.0f})'.format(total_deduction_team)"/></strong></td>
+                                                <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_deduction_team)"/></strong></td>
+                                                <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_tax_team)"/></strong></td>
                                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_rounding_team)"/></strong></td>
                                                 <td class="text-right"><strong><t t-esc="'{0:,.0f}'.format(total_netto_team)"/></strong></td>
                                                 <td colspan="2" style="width:20%"></td>
